--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             
         </nav>
         <main>
+            <center>
             <h1></h1>
            <iframe width="400" height="300" src="https://www.youtube.com/embed/5Re1xVB_0ZU" frameborder="0" ></iframe>
             <section class="info">
@@ -41,7 +42,7 @@
                     <a class="article-but" href="">Детальніше</a>
                 </article>
             </section>
-          
+          </center>
         </main>
         <footer>
               <div class="contacts">
